tests/error/comptime/check_slice_construction01.bz
// error: invalid memory range for a slice of type '[: i32]'
// note: while evaluating expression at compile time
// note: begin address points to an object from a finished stack frame
// error: failed to evaluate expression at compile time
function foo() -> *i32
{
	let i = 0;
	return &i;
}

function test()
{
	(consteval {
		let i = 0;
		__builtin_slice_from_ptrs(foo(), &i);
	});
}
